<resources>
    <string name="app_name">Booking App</string>
    <string name="Login">Log In!</string>
    <string name="studentIDLabel">Student ID</string>
    <string name="password">Password</string>

    <string name="branchTest01">brTest01</string>
    


    <string name="dateLabel">Date</string>
    <string name="locationLabel">Choose Location</string>
    <string name="numPaxLabel">Number of Pax</string>
    <string name="starttime">Start Time/End Time</string>
    <string name="Title">SUTD Room Booking Portal</string>
    <string name="to">to</string>

    <string name="Tester">TESTING PUSH</string>

    <string-array name="StartTime">
        <item>1 am</item>
        <item>2 am</item>
        <item>3 am</item>
        <item>4 am</item>
        <item>5 am</item>
        <item>6 am</item>
        <item>7 am</item>
        <item>8 am</item>
        <item>9 am</item>
        <item>10 am</item>
        <item>11 am</item>
        <item>12 pm</item>
        <item>1 pm</item>
        <item>2 pm</item>
        <item>3 pm</item>
        <item>4 pm</item>
        <item>5 pm</item>
        <item>6 pm</item>
        <item>7 pm</item>
        <item>8 pm</item>
        <item>9 pm</item>
        <item>10 pm</item>
        <item>11 pm</item>
        <item>12 am</item>
    </string-array>

    <string-array name="Locations">
        <item>Blk 55</item>
        <item>Blk 57</item>
        <item>Blk 59</item>
    </string-array>
</resources>
